--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     <script src="app.js"> </script>
   </head>
   <body>
-    <div class="container-fluid text-center mt-5">
+    <div class="container-fluid text-center mt-5" id="content">
       <p id="excuse">My dog ate my homework</p></p>
-      <button type="button" class="btn btn-primary" id="refresfhPage">New Excuse!</button>
+      <button type="button" class="btn btn-primary" id="refreshContent">New Excuse!</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
